<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/album_heading"
        style="@style/alhumHeading"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/album_1"
                android:text="@string/album_name_1"
                style="@style/albumName"/>
            <TextView
                android:id="@+id/album_2"
                android:text="@string/album_name_2"
                style="@style/albumName"/>
            <TextView
                android:id="@+id/album_3"
                android:text="@string/album_name_3"
                style="@style/albumName"/>
            <TextView
                android:id="@+id/album_4"
                android:text="@string/album_name_4"
                style="@style/albumName"/>
            <TextView
                android:id="@+id/album_5"
                android:text="@string/album_name_5"
                style="@style/albumName"/>
            <TextView
                android:id="@+id/album_6"
                android:text="@string/album_name_6"
                style="@style/albumName"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read the albums from the library."
                android:padding="16dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
